update on client changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <div class="chat-widget">
         <header class="chat-header">
             <div class="header-info">
-                <h2>CN Medical Aesthetics</h2>
+                <h2>CN Medical Assistant</h2>
                 <span class="status-dot"></span>
             </div>
         </header>
